--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -47,7 +47,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2023a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2023 年 3 月 3 日版本</a></p>
+    <p><a href="./tktMach2023b2.mdx" download><i class="fas fa-download"></i>下载词典 - 2023 年 4 月 29 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -133,10 +133,11 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-04-15 (v3.7.9)
+        2023-04-29 (v3.7.10)
         <ul>
-          <li>新增车站：<var>霸州西</var>、<var>白洋淀</var>、<var>东海县</var>、<var>廊坊</var>、<var>南翔北</var>、<var>武汉东</var>、<var>新沂</var>、<var>雄安</var>。</li>
-          <li>车站组总数达 29 个，车站总数达 692 个，机器数量达 1944 台。</li>
+          <li>新增车站：<var>黑山寺</var>。</li>
+          <li>新增车站联合体：<var>浙江丽水(城市)</var>。</li>
+          <li>车站组总数达 30 个，车站总数达 693 个，机器数量达 1952 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
