--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
             </a>
           </p>
           <p lang="zh">
-            <a href="/rail/tktmach_latest.html">运转大数据 (中国铁路售票机综合统计) (中文 / 日本語 / English)</a>
+            <a href="./rail/tktmach_latest.html">运转大数据 (中国铁路售票机综合统计) (中文 / 日本語 / English)</a>
           </p>
           <p lang="zh">
-            <a href="/rail/tktMach2022g2.mdx" download>下载：运转大数据 Mdict (中文 Chinese)</a>
+            <a href="./rail/tktMach2022g2.mdx" download>下载：运转大数据 Mdict (中文 Chinese)</a>
           </p>
           <p lang="ja">
-            <a href="/rail/tktMach2022g2.ja.mdx" download>ダウンロード：運転マスデータ Mdict (日本語 Japanese)</a>
+            <a href="./rail/tktMach2022g2.ja.mdx" download>ダウンロード：運転マスデータ Mdict (日本語 Japanese)</a>
           </p>
 
           <p>
