--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang="zh-Hans-CN">
+<html lang="zh-Hans">
 
 <head>
   <title>运转大数据 ｜ 版本迭代史</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="keyword" content="运转大数据" />
-  <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/fontawesome.min.css">
-  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/solid.min.css">
-  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/brands.min.css">
-  <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.staticfile.org/bootstrap/5.2.3/css/bootstrap.min.css">
+  <script src="https://cdn.staticfile.org/bootstrap/5.2.3/js/bootstrap.bundle.min.js" defer></script>
   <style>
     body{padding-top:4em;}img.ptimg{width:300px;max-width:100%;height:auto}p.score span.s0lt1,p.score span.s1lt1{color:red!important}p.score span.s1lt2,p.score span.s2lt1,p.score span.s2lt2,p.score span.s3lt1,p.score span.s4lt2{color:#ff0!important}p.score span.s4lt1,p.score span.s5lt1{color:#3f3!important}p.score span.s0lt2,p.score span.s3lt2,p.score span.s5lt2{color:transparent!important}
   </style>
@@ -19,20 +15,27 @@
 
 <body>
   <a id="top"></a>
-  <nav class="navbar navbar-expand-sm fixed-top navbar-light" style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="./tktmach_latest.html">运转大数据</a>
-    <span class="navbar-text"> By Kina(木菜)</span>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="./tktmach_latest.html">返回</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./tktGener.html">生成器</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./tktAbout.html">关于</a>
-      </li>
-    </ul>
+  <nav class="navbar navbar-expand-sm fixed-top" style="background-color: #e3f2fd;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="./tktmach_latest.html">运转大数据</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTog" aria-controls="navbarTog" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTog">
+        <span class="navbar-text"> By Kina(木菜)</span>
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="./tktmach_latest.html">返回</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./tktGener.html">生成器</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./tktAbout.html">关于</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </nav>
   <div class="container">
     <h1>
@@ -67,6 +70,16 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-05-13 (v3.8.0-alpha)
+        <ul>
+          <li>新增车站：<var>涟源</var>、<var>阳朔</var>。</li>
+          <li>更改文件名版本号为<code>2023c</code>。</li>
+          <li>更新了生成器。</li>
+          <li>页面向新版本迁移。辅助页面更换为 Bootstrap 5.2.3 外观。</li>
+          <li>车站组总数达 30 个，车站总数达 695 个，机器数量达 1977 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-04-29 (v3.7.10)
         <ul>
           <li>新增车站：<var>黑山寺</var>。</li>
