--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -13,37 +13,44 @@
   <script nomodule src="https://cdn.staticfile.org/es5-shim/4.6.7/es5-sham.min.js"></script>
   <!--Polyfills END-->
   <!--<link rel="stylesheet" href="./js/bootstrap.min.css">-->
-  <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/fontawesome.min.css">
-  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/solid.min.css">
-  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/brands.min.css">
-  <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js" defer></script>
+  <link rel="stylesheet" href="https://cdn.staticfile.org/bootstrap/5.2.3/css/bootstrap.min.css">
+  <link rel="preload" href="https://cdn.staticfile.org/font-awesome/6.4.0/js/solid.min.js" type="text/javascript" as="script">
+  <link rel="preload" href="https://cdn.staticfile.org/font-awesome/6.4.0/js/brands.min.js" type="text/javascript" as="script">
+  <link rel="preload" href="https://cdn.staticfile.org/font-awesome/6.4.0/js/fontawesome.min.js" type="text/javascript" as="script">
+  <script src="https://cdn.staticfile.org/bootstrap/5.2.3/js/bootstrap.bundle.min.js" defer></script>
   <script src="./js/tkt_type.min.js"></script>
   <!-- Nim BEGIN -->
   <link rel="preload" href="./js/aboutPage.min.js" type="text/javascript" as="script">
   <link rel="preload" href="./js/aboutPageData.min.js" type="text/javascript" as="script">
   <!-- Nim END -->
   <style>
-    body{padding-top:4em;}img.ptimg{width:300px;max-width:100%;height:auto}p.score .s0lt1,p.score .s1lt1{color:red!important}p.score .s1lt2,p.score .s2lt1,p.score .s2lt2,p.score .s3lt1,p.score .s4lt2{color:#ff0!important}p.score .s4lt1,p.score .s5lt1{color:#3f3!important}.heimu,.heimu a{background-color:#252525;color:#252525}a.promo{word-break: break-all}
+    body{padding-top:4em;}img.ptimg{width:300px;max-width:100%;height:auto}p.score .s0lt1,p.score .s1lt1{color:red!important}p.score .s1lt2,p.score .s2lt1,p.score .s2lt2,p.score .s3lt1,p.score .s4lt2{color:#ff0!important}p.score .s4lt1,p.score .s5lt1{color:#3f3!important}.heimu,.heimu a{background-color:#222;color:#222}a.promo{word-break: break-all}
   </style>
 </head>
 
 <body>
   <a id="top"></a>
-  <nav class="navbar navbar-expand-sm fixed-top navbar-light" style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="./tktmach_latest.html">运转大数据</a>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="./tktmach_latest.html">返回</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./tktGener.html">生成器</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" href="#">关于</a>
-      </li>
-    </ul>
+  <nav class="navbar navbar-expand-sm fixed-top" style="background-color: #e3f2fd;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="./tktmach_latest.html">运转大数据</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTog" aria-controls="navbarTog" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTog">
+        <span class="navbar-text"> By Kina(木菜)</span>
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="./tktmach_latest.html">返回</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./tktGener.html">生成器</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">关于</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
@@ -68,21 +75,24 @@
     <span class="text-muted" lang="en">A brunch of personal web pages, under construction. All data were granted by users and some sensitive information is mangled to protect privacy. Use this site with extra care and DO NOT rely on it when planning a travel and / or traveling. When English translation is not available, please refer to the Chinese version. Any question please contact Kina or just <a href="#plq">comment</a> us.</span></p>
     <!-- Person info - React -->
     <script src="./js/aboutPageData.min.js" defer></script>
-    <article class="card" id="react_container_persons"></article>
+    <article class="container m-1" id="react_container_persons"></article>
     <script src="./js/aboutPage.min.js" defer></script>
+    <script defer src="https://cdn.staticfile.org/font-awesome/6.4.0/js/solid.min.js"></script>
+    <script defer src="https://cdn.staticfile.org/font-awesome/6.4.0/js/brands.min.js"></script>
+    <script defer src="https://cdn.staticfile.org/font-awesome/6.4.0/js/fontawesome.min.js"></script>
   </div>
   <div class="container my-3">
     <h2>趋势榜 <small class="text-muted" lang="en">Trend List</small></h2>
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
       <tr><td>1</td><td>长春</td><td>54</td><td>65</td></tr>
-      <tr><td>2</td><td>南京南</td><td>52</td><td>62</td></tr>
-      <tr><td>3</td><td>郑州东</td><td>51</td><td>70</td></tr>
+      <tr><td>2</td><td>郑州东</td><td>52</td><td>71</td></tr>
+      <tr><td>3</td><td>南京南</td><td>52</td><td>66</td></tr>
       <tr><td>4</td><td>郑州</td><td>50</td><td>72</td></tr>
       <tr><td>5</td><td>北京南</td><td>46</td><td>55</td></tr>
       <tr><td>6</td><td>杭州东</td><td>36</td><td>42</td></tr>
-      <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
-      <tr><td>8</td><td>北京西</td><td>30</td><td>39</td></tr>
+      <tr><td>7</td><td>北京西</td><td>31</td><td>40</td></tr>
+      <tr><td>8</td><td>兰州</td><td>30</td><td>41</td></tr>
       <tr><td>9</td><td>南京</td><td>28</td><td>33</td></tr>
       <tr><td>10</td><td>兰州西</td><td>27</td><td>35</td></tr>
     </table>
@@ -102,7 +112,7 @@
       <li class="list-group-item">红色软质车票由于其抗褪色特性，可以视情况加分。（系统自动完成）</li>
     </ul>
   </div>
-  <article id="tktpaperdesc" class="container">
+  <article id="tktpaperdesc" class="container py-2">
     <h2>常见票纸类型 <small class="text-muted" lang="en">Frequently seen paper types</small></h2>
     <h3>蓝票 <small class="text-muted" lang="en">Blue papers</small></h3>
     <h3>红票 <small class="text-muted" lang="en">Red papers</small></h3>
@@ -121,7 +131,7 @@
     forEach(getTktRangeBlue(),a1);
     forEach(getTktRangeRed(),a2);
   </script>
-  <article class="container">
+  <article class="container py-2">
     <h2>
       版本迭代史
       <small class="text-muted" lang="ja">Update log 変更履歴（最近）</small>
@@ -133,11 +143,13 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-04-29 (v3.7.10)
+        2023-05-13 (v3.8.0-alpha)
         <ul>
-          <li>新增车站：<var>黑山寺</var>。</li>
-          <li>新增车站联合体：<var>浙江丽水(城市)</var>。</li>
-          <li>车站组总数达 30 个，车站总数达 693 个，机器数量达 1952 台。</li>
+          <li>新增车站：<var>涟源</var>、<var>阳朔</var>。</li>
+          <li>更改文件名版本号为<code>2023c</code>。</li>
+          <li>更新了生成器。</li>
+          <li>页面向新版本迁移。辅助页面更换为 Bootstrap 5.2.3 外观。</li>
+          <li>车站组总数达 30 个，车站总数达 695 个，机器数量达 1977 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
@@ -176,7 +188,7 @@
     </ul>
   </article>
   <a id="plq"></a>
-  <div id="vcomments" class="container"></div>
+  <div id="vcomments" class="container my-2"></div>
   <script>
       function _ty241(){new Valine({el: '#vcomments',appId: 'VY3q0lDUnkBNoCLciW7W4tCC-gzGzoHsz',appKey: 'RUb9iXuGiAK80y4rc9J2zN65', visitor: true, enableQQ: true, requiredFields: ['nick']})}
   </script>
@@ -185,7 +197,15 @@
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png"></a><br>本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。与作者联系以便获取以其他协议授权的数据。
   </div>
   <footer class="container my-2">
-    <small class="text-muted">文中各商标为对应公司的资产。</small>
+    <p>
+      <small id="supAbout" class="leancloud_visitors text-muted">
+        阅读量 
+        <span class="leancloud-visitors-count"></span>
+      </small>
+    </p>
+    <p>
+      <small class="text-muted">文中各商标为对应公司的资产。</small>
+    </p>
   </footer>
 </body>
 
