--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,14 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-05-27 (v3.8.0-beta.1)
+        <ul>
+          <li>新增车站：<var>白云机场北</var>、<var>东莞西</var>。</li>
+          <li>更新了生成器。默认带一个逗号辅助。</li>
+          <li>车站组总数达 30 个，车站总数达 697 个，机器数量达 1996 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-05-13 (v3.8.0-alpha)
         <ul>
           <li>新增车站：<var>涟源</var>、<var>阳朔</var>。</li>
