--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,14 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2023-05-27 (v3.8.0-beta.1)
+          <ul>
+            <li>新しい駅：<var>白雲機場北</var>（広州白雲空港）、<var>東莞西</var>。</li>
+            <li>収集表を更新。</li>
+            <li>記録した駅組 30 個、駅 697 個、機器 1996 個。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2023-05-13 (v3.8.0-alpha)
           <ul>
             <li>新しい駅：<var>漣源</var>、<var>陽朔</var>。</li>
