--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -86,14 +86,14 @@
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
       <tr><td>1</td><td>长春</td><td>54</td><td>65</td></tr>
-      <tr><td>2</td><td>郑州东</td><td>52</td><td>71</td></tr>
-      <tr><td>3</td><td>南京南</td><td>52</td><td>66</td></tr>
+      <tr><td>2</td><td>南京南</td><td>53</td><td>68</td></tr>
+      <tr><td>3</td><td>郑州东</td><td>52</td><td>71</td></tr>
       <tr><td>4</td><td>郑州</td><td>50</td><td>72</td></tr>
       <tr><td>5</td><td>北京南</td><td>46</td><td>55</td></tr>
       <tr><td>6</td><td>杭州东</td><td>36</td><td>42</td></tr>
       <tr><td>7</td><td>北京西</td><td>31</td><td>40</td></tr>
       <tr><td>8</td><td>兰州</td><td>30</td><td>41</td></tr>
-      <tr><td>9</td><td>南京</td><td>28</td><td>33</td></tr>
+      <tr><td>9</td><td>南京</td><td>28</td><td>34</td></tr>
       <tr><td>10</td><td>兰州西</td><td>27</td><td>35</td></tr>
     </table>
   </div>
@@ -143,23 +143,21 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-05-13 (v3.8.0-alpha)
+        2023-05-27 (v3.8.0-beta.1)
+        <ul>
+          <li>新增车站：<var>白云机场北</var>、<var>东莞西</var>。</li>
+          <li>更新了生成器。默认带一个逗号辅助。</li>
+          <li>车站组总数达 30 个，车站总数达 697 个，机器数量达 1996 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
+        …… 2023-05-13 (v3.8.0-alpha)
         <ul>
           <li>新增车站：<var>涟源</var>、<var>阳朔</var>。</li>
           <li>更改文件名版本号为<code>2023c</code>。</li>
           <li>更新了生成器。</li>
           <li>页面向新版本迁移。辅助页面更换为 Bootstrap 5.2.3 外观。</li>
           <li>车站组总数达 30 个，车站总数达 695 个，机器数量达 1977 台。</li>
-        </ul>
-      </li>
-      <li class="list-group-item">
-        …… 2022-11-14 (v3.7.0)
-        <ul>
-          <li>调整大纲等级，以贴近 HTML 标准。更新部分依赖资源。</li>
-          <li>新增车站：<var>义乌</var>。</li>
-          <li>更改文件名版本号为<code>2022g</code>。</li>
-          <li>自本版本以后，文件名版本号与小版本号脱离一一对应关系，敬请注意。</li>
-          <li>车站组总数达 29 个，车站总数达 654 个，机器数量达 1753 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
