--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-06-05 (v3.8.0-beta.2)
+        <ul>
+          <li>新增车站：<var>固安</var>、<var>吉林</var>、<var>松原</var>、<var>洮南</var>、<var>乌兰浩特</var>。</li>
+          <li>车站组总数达 30 个，车站总数达 702 个，机器数量达 2008 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-05-27 (v3.8.0-beta.1)
         <ul>
           <li>新增车站：<var>白云机场北</var>、<var>东莞西</var>。</li>
