--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,9 +61,16 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2023-06-05 (v3.8.0-beta.2)
+          <ul>
+            <li>新しい駅：<var>固安</var>、<var>吉林</var>、<var>松原</var>、<var>洮南</var>、<var>烏蘭浩特</var>。</li>
+            <li>記録した駅組 30 個、駅 702 個、機器 2008 個。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2023-05-27 (v3.8.0-beta.1)
           <ul>
-            <li>新しい駅：<var>白雲機場北</var>（広州白雲空港）、<var>東莞西</var>。</li>
+            <li>新しい駅：<var>白雲機場北</var>（広州白雲空港 北）、<var>東莞西</var>。</li>
             <li>収集表を更新。</li>
             <li>記録した駅組 30 個、駅 697 個、機器 1996 個。</li>
           </ul>
@@ -141,7 +148,7 @@
           <ul>
             <li>記録「タグ」を追加</li>
             <li>一部の翻訳を調整。</li>
-            <li>新しい駅：<var>德清</var>、<var>鄧州東</var>、<var>温岭</var>、<var>偃師</var>。</li>
+            <li>新しい駅：<var>德清</var>、<var>鄧州東</var>、<var>温嶺</var>、<var>偃師</var>。</li>
             <li>ファイル版本番号は <code>2023a</code> にする。</li>
             <li>記録した駅組 29 個、駅 659 個、機器 1783 個。</li>
           </ul>
@@ -483,7 +490,7 @@
           2021-06-13(v2.3.12)
           <ul>
             <li>「卒業季」ですから、更新頻度はやや下がった。</li>
-            <li>新しい駅：<var>扶余</var>、<var>公主岭</var>、<var>平房</var></li>
+            <li>新しい駅：<var>扶余</var>、<var>公主嶺</var>、<var>平房</var></li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -561,7 +568,7 @@
           2021-04-05(v2.3.3)
           <ul>
             <li>
-              新しい駅：<var>八达岭長城</var>、<var>海拉爾</var>
+              新しい駅：<var>八达嶺長城</var>、<var>海拉爾</var>
             </li>
           </ul>
         </li>
@@ -603,7 +610,7 @@
           <ul>
             <li lang="en">Happy Women's Day!</li>
             <li>新しい駅：成都西、福利区、哈爾濱西、漢中、連云港、渑池南、彭山北、郫県西、深圳機場、雅安</li>
-            <li>駅組案内を作成。新規作成した駅組は：福平線(線路)、甘肃兰州(城市)、京張高速線(線路)</li>
+            <li>駅組案内を作成。新規作成した駅組は：福平線(線路)、甘肃蘭州(城市)、京張高速線(線路)</li>
             <li>コードを最適化、不要なデータを減らした。</li>
           </ul>
         </li>
@@ -635,7 +642,7 @@
         <li class="list-group-item">
           2021-02-01(v2.1.2):
           <ul>
-            <li>新しい駅：三间房、乌伊岭、伊春、佳木斯、南岔、友好、周家、哈爾濱、哈爾濱東、奎屯、日喀则、朗郷、朱砂古镇、梧州、汤池、浩良河、深圳西、绥化、美溪、西安南、西林、長楽、香兰、斉斉哈爾、斉斉哈爾南</li>
+            <li>新しい駅：三间房、烏伊嶺、伊春、佳木斯、南岔、友好、周家、哈爾濱、哈爾濱東、奎屯、日喀则、朗郷、朱砂古镇、梧州、汤池、浩良河、深圳西、绥化、美溪、西安南、西林、長楽、香蘭、斉斉哈爾、斉斉哈爾南</li>
             <li>新しい「駅資料」と「駅歴史」欄。</li>
           </ul>
         </li>
