--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -85,13 +85,13 @@
     <h2>趋势榜 <small class="text-muted" lang="en">Trend List</small></h2>
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-      <tr><td>1</td><td>长春</td><td>54</td><td>65</td></tr>
+      <tr><td>1</td><td>长春</td><td>54</td><td>69</td></tr>
       <tr><td>2</td><td>南京南</td><td>53</td><td>68</td></tr>
       <tr><td>3</td><td>郑州东</td><td>52</td><td>71</td></tr>
       <tr><td>4</td><td>郑州</td><td>50</td><td>72</td></tr>
       <tr><td>5</td><td>北京南</td><td>46</td><td>55</td></tr>
       <tr><td>6</td><td>杭州东</td><td>36</td><td>42</td></tr>
-      <tr><td>7</td><td>北京西</td><td>31</td><td>40</td></tr>
+      <tr><td>7</td><td>北京西</td><td>32</td><td>41</td></tr>
       <tr><td>8</td><td>兰州</td><td>30</td><td>41</td></tr>
       <tr><td>9</td><td>南京</td><td>28</td><td>34</td></tr>
       <tr><td>10</td><td>兰州西</td><td>27</td><td>35</td></tr>
@@ -143,11 +143,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-05-27 (v3.8.0-beta.1)
+        2023-06-05 (v3.8.0-beta.2)
         <ul>
-          <li>新增车站：<var>白云机场北</var>、<var>东莞西</var>。</li>
-          <li>更新了生成器。默认带一个逗号辅助。</li>
-          <li>车站组总数达 30 个，车站总数达 697 个，机器数量达 1996 台。</li>
+          <li>新增车站：<var>固安</var>、<var>吉林</var>、<var>松原</var>、<var>洮南</var>、<var>乌兰浩特</var>。</li>
+          <li>车站组总数达 30 个，车站总数达 702 个，机器数量达 2008 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
