--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,15 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2023-06-11 (v3.8.0-beta.3)
+          <ul>
+            <li>ご注意：このバージョンから（v4.0.0 以前）、ファイル版本番号の変更は毎年実行にされ、前世代との互換性は破棄される。この変更は日常使用に影響を与えない見込みだ。履歴を参照したいなら、git repoの履歴を参照してください。</li>
+            <li>新しい駅：<var>東莞東</var>、<var>贛州</var>、<var>紹興東</var>。</li>
+            <li>データ量を減らしのため、端末機能は動的再生にした。</li>
+            <li>記録した駅組 30 個、駅 705 個、機器 2019 個。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2023-06-05 (v3.8.0-beta.2)
           <ul>
             <li>新しい駅：<var>固安</var>、<var>吉林</var>、<var>松原</var>、<var>洮南</var>、<var>烏蘭浩特</var>。</li>
@@ -376,7 +385,7 @@
           2021-09-30(v3.0.8)
           <ul>
             <li>新しい駅：<var>冠豸山南</var></li>
-            <li>新しい駅組：<var>浦梅鉄路(線路)</var>、<var>兴泉鉄路(線路)</var></li>
+            <li>新しい駅組：<var>浦梅鉄路(線路)</var>、<var>興泉鉄路(線路)</var></li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -528,7 +537,7 @@
           2021-05-04(v2.3.7)
           <ul>
           <li>
-            新しい駅：<var>北京大兴</var>、<var>古交</var>、<var>菏泽</var>、<var>黄村</var>、<var>黄山</var>、<var>聊城</var>、<var>灵石</var>、<var>庐江</var>、<var>庐江西</var>、<var>平遥</var>、<var>芜湖</var>、<var>延吉西</var>
+            新しい駅：<var>北京大興</var>、<var>古交</var>、<var>菏泽</var>、<var>黄村</var>、<var>黄山</var>、<var>聊城</var>、<var>灵石</var>、<var>庐江</var>、<var>庐江西</var>、<var>平遥</var>、<var>芜湖</var>、<var>延吉西</var>
           </li>
             <li>部分数据仍待录入。</li>
           </ul>
