--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -143,10 +143,12 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-06-05 (v3.8.0-beta.2)
+        2023-06-11 (v3.8.0-beta.3)
         <ul>
-          <li>新增车站：<var>固安</var>、<var>吉林</var>、<var>松原</var>、<var>洮南</var>、<var>乌兰浩特</var>。</li>
-          <li>车站组总数达 30 个，车站总数达 702 个，机器数量达 2008 台。</li>
+          <li>注意：本版本以后、v4.0.0发布以前，将改为每年更新文件名，放弃与前代的兼容性。这一改动预计不会影响日常使用。如需查阅历史版本请查看 git 库历史记录。</li>
+          <li>新增车站：<var>东莞东</var>、<var>赣州</var>、<var>绍兴东</var>。</li>
+          <li>票机功能现在动态显示，以减少带宽占用。</li>
+          <li>车站组总数达 30 个，车站总数达 705 个，机器数量达 2019 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
