--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,9 +70,17 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-06-25 (v3.8.0)
+        <ul>
+          <li>注意：v3.8.0-beta.3 版本以后、v4.0.0 发布以前，将改为每年更新文件名，放弃与前代的兼容性。这一改动预计不会影响日常使用。如需查阅历史版本请查看 git 库历史记录。</li>
+          <li>新增车站：<var>临潼</var>、<var>牟平</var>、<var>平泉北</var>、<var>兴隆县西</var>。</li>
+          <li>车站组总数达 30 个，车站总数达 709 个，机器数量达 2037 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-06-11 (v3.8.0-beta.3)
         <ul>
-          <li>注意：本版本以后、v4.0.0发布以前，将改为每年更新文件名，放弃与前代的兼容性。这一改动预计不会影响日常使用。如需查阅历史版本请查看 git 库历史记录。</li>
+          <li>注意：本版本以后、v4.0.0 发布以前，将改为每年更新文件名，放弃与前代的兼容性。这一改动预计不会影响日常使用。如需查阅历史版本请查看 git 库历史记录。</li>
           <li>新增车站：<var>东莞东</var>、<var>赣州</var>、<var>绍兴东</var>。</li>
           <li>票机功能现在动态显示，以减少带宽占用。</li>
           <li>车站组总数达 30 个，车站总数达 705 个，机器数量达 2019 台。</li>
