--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -54,7 +54,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2023b2.mdx" download><i class="fas fa-download"></i>下载词典 - 2023 年 4 月 29 日版本</a></p>
+    <p><a href="./tktMach2023c2.mdx" download><i class="fas fa-download"></i>下载词典 - 2023 年 6 月 25 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -85,15 +85,15 @@
     <h2>趋势榜 <small class="text-muted" lang="en">Trend List</small></h2>
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-      <tr><td>1</td><td>长春</td><td>54</td><td>69</td></tr>
-      <tr><td>2</td><td>南京南</td><td>53</td><td>68</td></tr>
-      <tr><td>3</td><td>郑州东</td><td>52</td><td>71</td></tr>
+      <tr><td>1</td><td>郑州东</td><td>54</td><td>73</td></tr>
+      <tr><td>2</td><td>长春</td><td>54</td><td>69</td></tr>
+      <tr><td>3</td><td>南京南</td><td>53</td><td>68</td></tr>
       <tr><td>4</td><td>郑州</td><td>50</td><td>72</td></tr>
-      <tr><td>5</td><td>北京南</td><td>46</td><td>55</td></tr>
+      <tr><td>5</td><td>北京南</td><td>47</td><td>56</td></tr>
       <tr><td>6</td><td>杭州东</td><td>36</td><td>42</td></tr>
       <tr><td>7</td><td>北京西</td><td>32</td><td>41</td></tr>
       <tr><td>8</td><td>兰州</td><td>30</td><td>41</td></tr>
-      <tr><td>9</td><td>南京</td><td>28</td><td>34</td></tr>
+      <tr><td>9</td><td>南京</td><td>28</td><td>35</td></tr>
       <tr><td>10</td><td>兰州西</td><td>27</td><td>35</td></tr>
     </table>
   </div>
@@ -143,12 +143,11 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-06-11 (v3.8.0-beta.3)
+        2023-06-25 (v3.8.0)
         <ul>
-          <li>注意：本版本以后、v4.0.0发布以前，将改为每年更新文件名，放弃与前代的兼容性。这一改动预计不会影响日常使用。如需查阅历史版本请查看 git 库历史记录。</li>
-          <li>新增车站：<var>东莞东</var>、<var>赣州</var>、<var>绍兴东</var>。</li>
-          <li>票机功能现在动态显示，以减少带宽占用。</li>
-          <li>车站组总数达 30 个，车站总数达 705 个，机器数量达 2019 台。</li>
+          <li>注意：v3.8.0-beta.3 版本以后、v4.0.0 发布以前，将改为每年更新文件名，放弃与前代的兼容性。这一改动预计不会影响日常使用。如需查阅历史版本请查看 git 库历史记录。</li>
+          <li>新增车站：<var>临潼</var>、<var>牟平</var>、<var>平泉北</var>、<var>兴隆县西</var>。</li>
+          <li>车站组总数达 30 个，车站总数达 709 个，机器数量达 2037 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
