--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,14 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2023-06-25 (v3.8.0)
+          <ul>
+            <li>ご注意：v3.8.0-beta.3 から v4.0.0 以前、ファイル版本番号の変更は毎年実行にされ、前世代との互換性は破棄される。この変更は日常使用に影響を与えない見込みだ。履歴を参照したいなら、git repo の履歴を参照してください。</li>
+            <li>新しい駅：<var>臨潼</var>、<var>牟平</var>、<var>平泉北</var>、<var>興隆県西</var>。</li>
+            <li>記録した駅組 30 個、駅 709 個、機器 2037 個。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2023-06-11 (v3.8.0-beta.3)
           <ul>
             <li>ご注意：このバージョンから（v4.0.0 以前）、ファイル版本番号の変更は毎年実行にされ、前世代との互換性は破棄される。この変更は日常使用に影響を与えない見込みだ。履歴を参照したいなら、git repoの履歴を参照してください。</li>
